@@ -1,3 +1,7 @@
+2009-03-31  Joel Brobecker  <brobecker@adacore.com>
+
+	* gdb.ada/tasks: New testcase.
+
 2009-03-30  Stan Shebs  <stan@codesourcery.com>
 
 	* gdb.trace/actions.exp: Update to match new info trace format.
